microservices-sock-shop-app/kubenertes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
      - host: sock-shop.ibechuksvictor.live
        http:
          paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
            pathType: Prefix
